main.tf
provider "aws" {}

variable vpc_cidr_blocks {}
variable subnet_cidr_blocks {}
variable env_prefix {}
variable avail_zone {}
variable my_ip {}
variable instance_type {}
variable public_key_location {}

resource "aws_vpc" "myapp-vpc" {
  cidr_blocks=var.vpc_cidr_blocks
  tags = {
    Name: "${var.env_prefix}-vpc"
  }
}

resource "aws-subnet" "myapp-subnet-1" {
  vpc_id = aws_vpc.myapp-vpc.vpc_id
  cidr_block = var.subnet_cidr_blocks
  tags = {
    Name: "${var.env_prefix}-subnet-1"
  }
}

resource "aws_route_table" "myapp-route-table" {
  vpc_id = aws_vpc.myapp-vpc.vpc_id

  route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internent_gateway.myapp-igw.id

      tags = {
        Name: "${var.env_prefix}-rtb"
      }
    }
    
}


resource "aws_internent_gateway" "mayapp-igw" {
  vpc_id = aws_vpc.myapp-vpc.vpc_id

  tags = {
    Name: "${var.env_prefix}-igw"
  }
}

resource "aws_route_table_association" "a-rtb-subnet" {
  subnet_id = aws_subnet.myapp-subnet-1.id
  route_table_id = aws_route_table.mayapp-route-table.id
}

resource "aws_security_group" "mayapp-sg" {
  name = "myapp-sg"
  vpc_id = aws_vpc.myapp-vpc.vpc_id

  ingress {
    from_port = 22
    to_port = 22
    protocal = "tcp"
    cidr_blocks = [var.my_ip]
  }

  ingress {
      from_port = 8080
      to_port = 8080
      protocal = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }


  egress {
     from_port = 0
      to_port = 0
      protocal = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      prefix_list_ids = []
  }
   
  tags = {
    Name: "${env_prefix}-sg"
  }
}

resource "aws_key_pair" "ssh-key" {
  key_name = <your key name>
  public_key = file(var.public_key_location) 
}

data "aws_ami" "latest-amazon-machine-linux" {
  most_recent = true
  owners = ["amazon"]
  filter {
    name: "name"
    values: ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
  fileter {
    name: "vitualization-type"
    values: ["hvm"]
  }
}

output {
  value = data.aws_ami.latest-amazon-machine-linux.id
}

resource "aws_instance" "myapp-server" {
  ami = data.aws_ami.latest-amazon-machine-linux.id
  instance_type = var.instance_type

  subnet_id = aws_subnet.myapp-subnet-1.id
  security_group_ids = [aws_security_group.myapp-sg.id]

  assosciate_public_ip_address = true
  key_name = aws_key_pair.ssh-key.key_name

  user_data = file("entry-script.sh"  )

  tags = {
    Name: "${env_prefix}-server"
  }


}
